- Se pueden registrar usuarios - Se enviará un correo de confirmación - Se puede confirmar el correo - Se envia un correo para restablecer la contraseña - Se puede restablecer la contraseña
Siguiente paso:
- Crear la funcionalidad de login

--- a/utils/.env
+++ b/utils/.env
@@ -9,4 +9,4 @@ EMAIL_PORT = 2525
 EMAIL_USER = aeefce3e7cef3e
 EMAIL_PASSWORD = 4bb38c1d94bce3
 
-SERVER_HOST = http://localhost:3000
+SERVER_HOST = http://192.168.100.188:3000
