--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "psr-4": {
             "Model\\": "./models",
             "MVC\\": "./",
-            "Controller\\": "./controllers"
+            "Controller\\": "./controllers",
+            "Class\\": "./classes"
         }
     },
     "authors": [
